Este es una segundo repositorio para realizar pruebas, y subir imagenes

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
             </header>
             <h1>Imagenes</h1>
             <hr>
-            <img src="./img/naty.jpg" alt="Image" width="200" >
+            <img src="./img/caricatura.jpg" alt="Image" width="200" >
             <hr>
             <p>Hola</p>
         </body>
