Realizando, estructura, agregando imagenes y modificando fuente y listas desordenadas

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,34 @@
         <meta charset="UTF-8">
         <meta name="title" content="Mis datos">
         <link rel="stylesheet" href="./styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+
      </head>
         <body>
             <header>
-            <h1>Prácticas, pruebas</h1>
+                <h1>Prácticas, pruebas</h1>
+                <nav>
+                    <ul>
+                        <li>
+                          <a href="">Colores</a>  
+                        </li>
+                        <li>
+                            <a href="">Plumones</a>
+                        </li>
+                        <li>
+                            <a href="">Crayolas</a>
+                        </li>
+                        <li>
+                            <a href="">"Otros"</a>
+                        </li>
+                    </ul>
+                </nav>
             </header>
-            <h1>Imagenes</h1>
-            <hr>
-            <img src="./img/caricatura.jpg" alt="Image" width="200" >
+                <h2>Imagenes</h2>
+                <hr>
+            <img src="../assets/childs.jpg" alt="Imagen de un niño y una niña" width="400">
             <hr>
             <p>Hola</p>
         </body>
