Realizando estructura a mi archivo, agregando listas, agregando color al background

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
-        <title>Imagenes e informacion de Yadira Puente</title>
+        <title>Sitio de Yadira Puente</title>
         <meta charset="UTF-8">
         <meta name="title" content="Mis datos">
         <link rel="stylesheet" href="./styles.css">
@@ -12,21 +12,24 @@
      </head>
         <body>
             <header>
-                <h1>Prácticas, pruebas</h1>
+                <h1>Materias en educación primaria</h1>
                 <nav>
                     <ul>
                         <li>
-                          <a href="">Colores</a>  
+                          <a href="">Español</a>  
                         </li>
                         <li>
-                            <a href="">Plumones</a>
+                            <a href="">Matemáticas</a>
                         </li>
                         <li>
-                            <a href="">Crayolas</a>
+                            <a href="">Ciencias Naturales</a>
                         </li>
                         <li>
-                            <a href="">"Otros"</a>
+                            <a href="">Formación Cívica y Etica</a>
                         </li>
+                        <li>
+                            <a href="">Cuantrix</a>
+                        </li>    
                     </ul>
                 </nav>
             </header>
@@ -34,7 +37,28 @@
                 <hr>
             <img src="../assets/childs.jpg" alt="Imagen de un niño y una niña" width="400">
             <hr>
-            <p>Hola</p>
         </body>
+        <main>
+            <article>
+                <h2>La educación primaria</h2>
+                <p>La Educación Primaria constituye el segundo nivel de la Educación Básica, ofrece un trayecto formativo coherente y consistente que da continuidad al desarrollo de competencias que los alumnos adquieren en la Educación Preescolar; además sienta las bases para que en el nivel de Educación Secundaria los estudiantes alcancen el perfil de egreso y desarrollen las competencias para la vida, que les permitan construir su identidad como los ciudadanos democráticos, críticos y creativos que requiere la sociedad mexicana en el siglo XXI.
+                    Durante la Educación Primaria los estudiantes experimentan diferentes cambios en sus procesos de desarrollo y aprendizaje por lo que es necesario que en este nivel tengan  oportunidades de aprendizaje que les permitan avanzar en el desarrollo de sus competencias. En ese sentido, la escuela y sus profesores requieren asesoría y un acompañamiento congruente con las necesidades de la práctica docente cotidiana, que genere acciones para atender y prevenir el rezago.</p>
+            </article>
+            <aside>
+                <h3>Temás relacionados</h3>
+                <ol>
+                    <li>
+                        <a href="">Vida Saludable</a>
+                    </li>
+                    <li>
+                        <a href="">Artes</a>
+                    </li>
+                </ol> 
+                <br>              
+            </aside>
+        </main>
+        <footer>
+            <p>Copyright Yadira Puente López</p>
+        </footer>
 </html>
 
