Realizando pruebas en estilos en mi página web, que estoy replicando de la primera página web

--- a/src/index.html
+++ b/src/index.html
@@ -16,19 +16,19 @@
                 <nav>
                     <ul>
                         <li>
-                          <a href="">Español</a>  
+                          <a href="https://es.wikipedia.org/wiki/Gram%C3%A1tica_del_espa%C3%B1ol#:~:text=La%20gram%C3%A1tica%20del%20espa%C3%B1ol%20es,las%20relaciones%20entre%20sus%20elementos.&text=Sint%C3%A1cticamente%20el%20espa%C3%B1ol%20es%20una%20lengua%20de%20n%C3%BAcleo%20inicial%20altamente%20consistente.">Español</a>  
                         </li>
                         <li>
-                            <a href="">Matemáticas</a>
+                            <a href="https://www.todamateria.com/que-son-las-matematicas/">Matemáticas</a>
                         </li>
                         <li>
-                            <a href="">Ciencias Naturales</a>
+                            <a href="https://es.wikipedia.org/wiki/Ciencias_naturales">Ciencias Naturales</a>
                         </li>
                         <li>
-                            <a href="">Formación Cívica y Etica</a>
+                            <a href="https://es.wikipedia.org/wiki/Educaci%C3%B3n_c%C3%ADvica#:~:text=La%20educaci%C3%B3n%20c%C3%ADvica%20es%20el,pol%C3%ADtico%20y%20para%20el%20gobierno.">Formación Cívica y Etica</a>
                         </li>
                         <li>
-                            <a href="">Cuantrix</a>
+                            <a href="https://cuantrix.mx/">Cuantrix</a>
                         </li>    
                     </ul>
                 </nav>
@@ -48,10 +48,10 @@
                 <h3>Temás relacionados</h3>
                 <ol>
                     <li>
-                        <a href="">Vida Saludable</a>
+                        <a href="https://insp.mx/avisos/vida-saludable-nueva-materia-en-planes-de-estudio#:~:text=Con%20la%20asesor%C3%ADa%20de%20instituciones,adecuada%2C%20higiene%20y%20actividad%20f%C3%ADsica.">Vida Saludable</a>
                     </li>
                     <li>
-                        <a href="">Artes</a>
+                        <a href="https://es.wikipedia.org/wiki/Arte#:~:text=El%20arte%20(del%20lat%C3%ADn%20ars,diversos%20recursos%2C%20como%20los%20pl%C3%A1sticos%2C">Artes</a>
                     </li>
                 </ol> 
                 <br>              
