Realizando pruebas en estilos en mi página web, que estoy replicando de la primera página web

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
             </header>
                 <h2>Imagenes</h2>
                 <hr>
-            <img src="../assets/gpuente.jpg" alt="Imagen de un niño y una niña" width="400">
+            <img src="../assets/childs.jpg" alt="Imagen de un niño y una niña" width="400">
             <hr>
         </body>
         <main>
